@@ -10,7 +10,7 @@ from buildbot.twcompat import implements, which
 from buildbot.slave.interfaces import ISlaveCommand
 from buildbot.slave.registry import registerSlaveCommand
 
-cvs_ver = '$Revision: 1.49 $'[1+len("Revision: "):-2]
+cvs_ver = '$Revision: 1.50 $'[1+len("Revision: "):-2]
 
 # version history:
 #  >=1.17: commands are interruptable
@@ -1015,11 +1015,9 @@ class SVN(SourceBase):
     def parseGotRevision(self):
         # svn checkout operations finish with 'Checked out revision 16657.'
         # svn update operations finish the line 'At revision 16654.'
-        # But we don't use those. Instead, run 'svn info'.
-        if self.mode == "export":
-            # without the .svn metadir, svn info won't work
-            return None
-        command = [self.vcexe, "info"]
+        # But we don't use those. Instead, run 'svnversion'.
+        svnversion_command = getCommand("svnversion")
+        command = [svnversion_command]
         c = ShellCommand(self.builder, command,
                          os.path.join(self.builder.basedir, self.srcdir),
                          environ=self.env,
@@ -1028,10 +1026,16 @@ class SVN(SourceBase):
         c.usePTY = False
         d = c.start()
         def _parse(res):
-            r = re.search(r'^Revision: (\d+)$', c.stdout, re.M)
-            if r:
-                return int(r.group(1))
-            return None
+            r = c.stdout.strip()
+            got_version = None
+            try:
+                got_version = int(r)
+            except ValueError:
+                msg =("SVN.parseGotRevision unable to parse output "
+                      "of svnversion: '%s'" % r)
+                log.msg(msg)
+                self.sendStatus({'header': msg + "\n"})
+            return got_version
         d.addCallback(_parse)
         return d
 
